// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders a string with a link and an interpolated value inside, plus an interpolated value 1`] = `
<DocumentFragment>
  From 
  <a
    href="http://something1"
  >
    2/1/2019
  </a>
   to 2/28/2019
</DocumentFragment>
`;

exports[`Renders a string with a link with arbitrary attributes 1`] = `
<DocumentFragment>
  A link 
  <a
    class="button"
    href="http://something1"
    rel="noopener noreferrer"
    target="_blank"
  >
    in the
  </a>
   middle
</DocumentFragment>
`;

exports[`Renders a string with a links and an interpolated value 1`] = `
<DocumentFragment>
  A link 
  <a
    href="http://something1"
  >
    in the
  </a>
   middle and a date: 2/1/2019
</DocumentFragment>
`;

exports[`Renders a string with a working onClick callback 1`] = `
<DocumentFragment>
  A link 
  <a
    class="button"
    href="http://something1"
    target="_blank"
  >
    in the
  </a>
   middle
</DocumentFragment>
`;

exports[`Renders a string with multiple links in it 1`] = `
<DocumentFragment>
  A link 
  <a
    href="http://something1"
  >
    in the
  </a>
   middle and one 
  <a
    href="http://something2"
  >
    in the end
  </a>
</DocumentFragment>
`;

exports[`Renders a string with no links in it 1`] = `
<DocumentFragment>
  No links in the string
</DocumentFragment>
`;

exports[`Renders a string with one link in the middle 1`] = `
<DocumentFragment>
  A link 
  <a
    href="http://something"
  >
    in the
  </a>
   middle
</DocumentFragment>
`;

exports[`Renders nothing when the string is not there 1`] = `<DocumentFragment />`;
